testsuite/positive/Issue-1309.n
using System.Console;

class Q[T1, T2] { }
    
module AA
{
  public M[TSource](_ : Q[TSource, int]) : void { WriteLine("OK"); }
  public M[TSource, TResult](_ : Q[TSource, TResult]) : void where TResult : new() { }
}

AA.M(Q.[int, int]());

/*
BEGIN-OUTPUT
OK
END-OUTPUT
*/
