testsuite/negative/yield2.n
using System.Collections.Generic;

class D
{
  public GetEnumerator () : IEnumerator [int]
  {
    yield "foo"; // E: expected int.*, got string in assigned value
  }
}
